# eytelwein

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  ci-post-merge.yml  ci-pr.yml  job--build-exe.yml  job--change-log.yml  job--pre-commit.yml  job--sphinx-setup.yml  pyproject.toml  run_pip-compile_ci.py
.github/skills/eytelwein-implementation/: SKILL.md
.github/skills/private-to-public-function/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: make.bat
docs/guides/: eytelwein_implementation_standards.md  private_to_public_function_implementation_guide.md
docs/source/: conf.py  eytelwein_export.rst  index.rst  modules.rst
examples/: real_world_cross_section_flow.py
examples/advanced/: h_private_functions_not_recommended.py
examples/features/: a_output_unit_minimum_tension.py  b_imperial_input_dual_output.py  c_unit_errors_are_caught.py  d_physically_invalid_inputs_are_caught.py  e_output_precision_control.py  f_round_trip_consistency.py  g_constants_and_enums.py
plans/: extraction-plan.md  renaming-map.md
src/eytelwein/: __init__.py
src/eytelwein/belt_conveyor_design/: __init__.py  constants.py
src/eytelwein/din_22101/: CONTRIBUTING.md  __init__.py
src/eytelwein/horizontal_curves/: __init__.py
src/eytelwein/idler_design/: __init__.py
src/eytelwein/main/: constants.py  units.py
src/eytelwein/vdi_2341/: CONTRIBUTING.md  __init__.py
tests/: __init__.py  test_angle_handling.py  test_dummy.py
tests/main/: __init__.py  test_units.py
tests/test_belt_conveyor_design/: test_constants.py  test_conveyor_belt.py  test_public_api_belt_weight.py
tests/test_belt_conveyor_design/test_core/: test__belt_tensions_and_takeup_forces.py  test__design_layout_of_drive_system.py  test__design_of_conveyor_belt.py  test__distribution_of_belt_tensions_across_belt_width.py  test__minimum_pulley_diameter.py  test__resistance_and_power_for_steady_operations.py  test__volume_flow_mass_flow.py  test_belt_tensions_and_takeup_forces.py  test_design_layout_of_drive_system.py  test_design_of_conveyor_belt.py  test_distribution_of_belt_tensions_across_belt_width.py  test_minimum_pulley_diameter.py  test_resistance_and_power_for_steady_operations.py  test_volume_flow_mass_flow.py
tests/test_belt_conveyor_design/test_extended/: test__design_layout_of_drive_system.py  test__design_of_conveyor_belt.py  test__distribution_of_belt_tensions_across_belt_width.py  test__mass_inertia.py  test__minimum_pulley_diameter.py  test__resistance_and_power_for_steady_operations.py  test__volume_flow_mass_flow.py  test_design_layout_of_drive_system.py  test_design_of_conveyor_belt.py  test_distribution_of_belt_tensions_across_belt_width.py  test_mass_inertia.py  test_minimum_pulley_diameter.py  test_resistance_and_power_for_steady_operations.py  test_volume_flow_mass_flow.py
tests/test_din_22101/: test_constants.py  test_conveyor_belt.py  test_public_api_belt_weight.py
tests/test_din_22101/test_core/: test__belt_tensions_and_takeup_forces.py  test__design_layout_of_drive_system.py  test__distribution_of_belt_tensions_across_belt_width.py  test__minimum_pulley_diameter.py  test__resistance_and_power_for_steady_operations.py  test__volume_flow_mass_flow.py  test_belt_tensions_and_takeup_forces.py  test_design_layout_of_drive_system.py  test_distribution_of_belt_tensions_across_belt_width.py  test_minimum_pulley_diameter.py  test_resistance_and_power_for_steady_operations.py  test_volume_flow_mass_flow.py
tests/test_din_22101/test_extended/: test__design_layout_of_drive_system.py  test__design_of_conveyor_belt.py  test__distribution_of_belt_tensions_across_belt_width.py  (+10 more)
tests/test_horizontal_curves/: __init__.py
tests/test_idler_design/: __init__.py
tests/test_main/: test_constants.py
(+70 files in other folders)
