[project]
name = "eytelwein-export"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dorigo, Marco", email = "marco.dorigo@voith.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
eytelwein-export = "eytelwein_export:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pip-tools>=7.5.3",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "sphinx>=9.1.0",
]

[tool.ruff.format]
docstring-code-line-length = 60

[tool.commitizen]
version = "0.1.0"
name = "cz_conventional_commits"
update_changelog_on_bump = true
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version"
]
version_scheme = "pep440"
bump_message = "chore(release): $new_version [skip ci]"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--doctest-modules"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
