[project]
name = "eytelwein"
version = "0.1.0"
description = "Belt conveyor calculation library (DIN 22101, VDI 2341, horizontal curves)"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Dorigo, Marco", email = "marco.dorigo@voith.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "pint>=0.24.4",
    "scipy>=1.15.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/voith/eytelwein"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]

[tool.ruff.format]
docstring-code-line-length = 60

[tool.commitizen]
version = "0.1.0"
name = "cz_conventional_commits"
update_changelog_on_bump = true
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version"
]
version_scheme = "pep440"
bump_message = "chore(release): $new_version [skip ci]"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--doctest-modules"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
